# agentic_comedians

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/crew_jokers/: crew.py  main.py
src/crew_jokers/config/: agents.yaml  tasks.yaml
